--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <title>PizzaAppClient</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class = "text-center">
   <app-root></app-root>
 </body>
 </html>
